Fix for https://bugs.webkit.org/show_bug.cgi?id=34942 Fullscreen API naming is inconsistent -and corresponding- <rdar://problem/7729165>

Reviewed by Simon Fraser.

WebCore:

This patch changes all occurrences of "fullScreen" to the more
popular "fullscreen." webkitEnterFullScreen and
webkitExitFullScreen have been maintained for now for backwards
compatibility.

* html/HTMLVideoElement.cpp:
(WebCore::HTMLVideoElement::webkitEnterFullscreen):
(WebCore::HTMLVideoElement::webkitExitFullscreen):
* html/HTMLVideoElement.h:
(WebCore::HTMLVideoElement::webkitEnterFullScreen):
(WebCore::HTMLVideoElement::webkitExitFullScreen):
* html/HTMLVideoElement.idl:
* platform/graphics/mac/MediaPlayerProxy.h:

WebKit/mac:

This patch changes all occurrences of "fullScreen" to the more
popular "fullscreen."

* Plugins/Hosted/NetscapePluginHostProxy.h:
(WebKit::NetscapePluginHostProxy::isFullscreenWindowShowing):
* Plugins/Hosted/NetscapePluginHostProxy.mm:
(WebKit::NetscapePluginHostProxy::NetscapePluginHostProxy):
(WebKit::NetscapePluginHostProxy::didEnterFullscreen):
(WebKit::NetscapePluginHostProxy::didExitFullscreen):
(WebKit::NetscapePluginHostProxy::setFullscreenWindowIsShowing):
(WKPCSetFullscreenWindowIsShowing):
* Plugins/Hosted/WebKitPluginClient.defs:
* Plugins/WebNetscapePluginView.mm:
(-[WebNetscapePluginView _workaroundSilverlightFullscreenBug:]):
(-[WebNetscapePluginView _createPlugin]):
(-[WebNetscapePluginView _destroyPlugin]):
* WebView/WebVideoFullscreenHUDWindowController.mm:
(-[WebVideoFullscreenHUDWindowController windowDidLoad]):

WebKit/win:

This patch changes all occurrences of "fullScreen" to the more
popular "fullscreen."

* FullscreenVideoController.cpp:
(FullscreenVideoController::onMouseDown):
(FullscreenVideoController::onMouseMove):
(FullscreenVideoController::onMouseUp):
* FullscreenVideoController.h:
(FullscreenVideoController::fullscreenToHUDCoordinates):



Canonical link: https://commits.webkit.org/47241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55946 268f45cc-cd09-0410-ab3c-d52691b4dbfc