WebCore/html/HTMLVideoElement.cpp
@@ -214,7 +214,7 @@ bool HTMLVideoElement::hasAvailableVideoFrame() const
     return player()->hasAvailableVideoFrame();
 }
 
-void HTMLVideoElement::webkitEnterFullScreen(bool isUserGesture, ExceptionCode& ec)
+void HTMLVideoElement::webkitEnterFullscreen(bool isUserGesture, ExceptionCode& ec)
 {
     if (isFullscreen())
         return;
@@ -229,7 +229,7 @@ void HTMLVideoElement::webkitEnterFullScreen(bool isUserGesture, ExceptionCode& 
     enterFullscreen();
 }
 
-void HTMLVideoElement::webkitExitFullScreen()
+void HTMLVideoElement::webkitExitFullscreen()
 {
     if (isFullscreen())
         exitFullscreen();
