WebCore/platform/graphics/mac/MediaPlayerProxy.h
@@ -40,8 +40,8 @@ enum MediaPlayerProxyNotificationType {
     MediaPlayerNotificationStartUsingNetwork,
     MediaPlayerNotificationStopUsingNetwork,
 
-    MediaPlayerNotificationEnteredFullScreen,
-    MediaPlayerNotificationExitedFullScreen,
+    MediaPlayerNotificationEnteredFullscreen,
+    MediaPlayerNotificationExitedFullscreen,
     
     MediaPlayerNotificationReadyForInspection,
     MediaPlayerNotificationReadyForPlayback,
