WebKit/mac/Plugins/Hosted/NetscapePluginHostProxy.h
@@ -54,8 +54,8 @@ public:
     bool isMenuBarVisible() const { return m_menuBarIsVisible; }
     void setMenuBarVisible(bool);
 
-    bool isFullScreenWindowShowing() const { return m_fullScreenWindowIsShowing; }
-    void setFullScreenWindowIsShowing(bool);
+    bool isFullscreenWindowShowing() const { return m_fullscreenWindowIsShowing; }
+    void setFullscreenWindowIsShowing(bool);
 
     void setModal(bool);
 
@@ -73,8 +73,8 @@ private:
     void beginModal();
     void endModal();
 
-    void didEnterFullScreen() const;
-    void didExitFullScreen() const;
+    void didEnterFullscreen() const;
+    void didExitFullscreen() const;
 
     static void deadNameNotificationCallback(CFMachPortRef, void *msg, CFIndex size, void *info);
 
@@ -96,7 +96,7 @@ private:
     RetainPtr<WebPlaceholderModalWindow *> m_placeholderWindow;
     unsigned m_isModal;
     bool m_menuBarIsVisible;
-    bool m_fullScreenWindowIsShowing;
+    bool m_fullscreenWindowIsShowing;
     const ProcessSerialNumber m_pluginHostPSN;
 
     unsigned m_processingRequests;
